deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dreamwell
  namespace: dreamwell
  annotations:
    cert-manager.io/cluster-issuer: clusterissuer
    cert-manager.io/private-key-rotation-policy: Always
    nginx.ingress.kubernetes.io/auth-method: GET
    nginx.ingress.kubernetes.io/auth-url: http://authelia.authelia.svc.cluster.local/api/authz/auth-request
    nginx.ingress.kubernetes.io/auth-signin: https://auth.bottriell.ca?rm=$request_method
    nginx.ingress.kubernetes.io/auth-response-headers: Remote-User,Remote-Name,Remote-Groups,Remote-Email
    nginx.ingress.kubernetes.io/auth-cache-key: "$cookie_authelia_session"
    nginx.ingress.kubernetes.io/auth-cache-duration: "200 202 5m, 401 30s"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - dreamwell.bottriell.ca
      secretName: dreamwell-tls
  rules:
    - host: dreamwell.bottriell.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dreamwell
                port:
                  name: http
